<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CalculatorFragment">

    <TextView
            android:text="@string/_0"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/text_console"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/constraint_layout_functional"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="60sp"
            android:paddingEnd="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollbars="vertical"
            android:maxLines="1"
            android:textAlignment="textEnd"
            android:gravity="end|bottom"
            android:paddingRight="5dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"/>
    <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint_layout_functional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <android.support.constraint.ConstraintLayout
                android:id="@+id/constraint_layout_row_1"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/constraint_layout_row_2"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content">
            <Button
                    android:text="@string/ac"
                    android:layout_width="0dp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintHorizontal_weight="1"
                    android:layout_height="82dp"
                    style="@style/NumberButton"
                    android:id="@+id/btn_ac"
                    app:layout_constraintEnd_toStartOf="@id/btn_change"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            <Button
                    android:text="@string/status"
                    android:layout_width="0dp"
                    android:layout_height="82dp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    android:id="@+id/btn_change"
                    style="@style/NumberButton"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_percent"
                    app:layout_constraintStart_toEndOf="@id/btn_ac"/>
            <Button
                    android:text="@string/percent"
                    android:layout_width="0dp"
                    android:layout_height="82dp"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    android:id="@+id/btn_percent"
                    style="@style/NumberButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_divide"
                    app:layout_constraintStart_toEndOf="@id/btn_change"/>
            <Button
                    android:text="@string/divide"
                    android:layout_width="0dp"
                    app:layout_constraintHorizontal_weight="1"
                    android:layout_height="82dp"
                    android:id="@+id/btn_divide"
                    style="@style/FunctionalButton"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_percent"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
                android:id="@+id/constraint_layout_row_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/constraint_layout_row_3"
                app:layout_constraintTop_toBottomOf="@id/constraint_layout_row_1">
            <Button
                    android:text="@string/_7"
                    android:layout_width="0dp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintHorizontal_weight="1"
                    android:layout_height="82dp"
                    android:id="@+id/btn_7"
                    style="@style/NumberButton"
                    app:layout_constraintEnd_toStartOf="@id/btn_8"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            <Button
                    android:text="@string/_8"
                    android:layout_width="0dp"
                    android:layout_height="82dp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    android:id="@+id/btn_8"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/NumberButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_9"
                    app:layout_constraintStart_toEndOf="@id/btn_7"/>
            <Button
                    android:text="@string/_9"
                    android:layout_width="0dp"
                    android:layout_height="82dp"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    android:id="@+id/btn_9"
                    style="@style/NumberButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_multi"
                    app:layout_constraintStart_toEndOf="@id/btn_8"/>
            <Button
                    android:text="@string/x"
                    android:layout_width="0dp"
                    app:layout_constraintHorizontal_weight="1"
                    android:layout_height="82dp"
                    android:id="@+id/btn_multi"
                    style="@style/FunctionalButton"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_9"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
                android:id="@+id/constraint_layout_row_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/constraint_layout_row_4"
                app:layout_constraintTop_toBottomOf="@id/constraint_layout_row_2">
            <Button
                    android:text="@string/_4"
                    android:layout_width="0dp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintHorizontal_weight="1"
                    android:layout_height="82dp"
                    android:id="@+id/btn_4"
                    style="@style/NumberButton"
                    app:layout_constraintEnd_toStartOf="@id/btn_5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            <Button
                    android:text="@string/_5"
                    android:layout_width="0dp"
                    android:layout_height="82dp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    android:id="@+id/btn_5"
                    style="@style/NumberButton"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_6"
                    app:layout_constraintStart_toEndOf="@id/btn_4"/>
            <Button
                    android:text="@string/_6"
                    android:layout_width="0dp"
                    android:layout_height="82dp"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    android:id="@+id/btn_6"
                    style="@style/NumberButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_minus"
                    app:layout_constraintStart_toEndOf="@id/btn_5"/>
            <Button
                    android:text="@string/minus"
                    android:layout_width="0dp"
                    app:layout_constraintHorizontal_weight="1"
                    android:layout_height="82dp"
                    android:id="@+id/btn_minus"
                    style="@style/FunctionalButton"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_6"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
                android:id="@+id/constraint_layout_row_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/constraint_layout_row_5"
                app:layout_constraintTop_toBottomOf="@id/constraint_layout_row_3">
            <Button
                    android:text="@string/_1"
                    android:layout_width="0dp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintHorizontal_weight="1"
                    android:layout_height="82dp"
                    android:id="@+id/btn_1"
                    style="@style/NumberButton"
                    app:layout_constraintEnd_toStartOf="@id/btn_2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            <Button
                    android:text="@string/_2"
                    android:layout_width="0dp"
                    android:layout_height="82dp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    android:id="@+id/btn_2"
                    style="@style/NumberButton"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_3"
                    app:layout_constraintStart_toEndOf="@id/btn_1"/>
            <Button
                    android:text="@string/_3"
                    android:layout_width="0dp"
                    android:layout_height="82dp"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    android:id="@+id/btn_3"
                    style="@style/NumberButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_plus"
                    app:layout_constraintStart_toEndOf="@id/btn_2"/>
            <Button
                    android:text="@string/plus"
                    android:layout_width="0dp"
                    app:layout_constraintHorizontal_weight="1"
                    android:layout_height="82dp"
                    android:id="@+id/btn_plus"
                    style="@style/FunctionalButton"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_3"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
                android:id="@+id/constraint_layout_row_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraint_layout_row_4">
            <Button
                    android:text="@string/_0"
                    android:layout_width="0dp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintHorizontal_weight="2"
                    android:layout_height="82dp"
                    android:id="@+id/btn_0"
                    style="@style/NumberButton"
                    app:layout_constraintEnd_toStartOf="@id/btn_dot"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            <Button
                    android:text="@string/dot"
                    android:layout_width="0dp"
                    android:layout_height="82dp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    android:id="@+id/btn_dot"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/NumberButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_equal"
                    app:layout_constraintStart_toEndOf="@id/btn_0"/>
            <Button
                    android:text="@string/equal"
                    android:layout_width="0dp"
                    android:layout_height="82dp"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    android:id="@+id/btn_equal"
                    style="@style/FunctionalButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_dot"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>